feat: Initialize Next.js webapp and add kiosk toggle
- Add Next.js project structure in webapp/.
- Update anyboot.conf to point KIOSK_URL to localhost:3000.
- Add KIOSK_MODE flag to anyboot.conf.
- Modify build.sh to read KIOSK_MODE and conditionally apply --kiosk flag.
- Update .gitignore for Next.js files.

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,9 @@ anyboot-test.img
 # OS Specific
 .DS_Store
 Thumbs.db
+
+# Next.js webapp
+webapp/node_modules
+webapp/.next
+webapp/out
+webapp/.env*.local
