--- a/anyboot.conf
+++ b/anyboot.conf
@@ -1,4 +1,5 @@
 # Configuration for AnyBoot
 
 # URL to launch in Firefox Kiosk mode on boot
-KIOSK_URL=https://github.com/mikl0s/anyboot
+KIOSK_URL=http://localhost:3000
+KIOSK_MODE=true # Set to false to disable kiosk mode for development
