feat: Set GRUB timeout to 2 seconds and disable kiosk mode

--- a/anyboot.conf
+++ b/anyboot.conf
@@ -2,4 +2,4 @@
 
 # URL to launch in Firefox Kiosk mode on boot
 KIOSK_URL=http://localhost:3000
-KIOSK_MODE=true # Set to false to disable kiosk mode for development
+KIOSK_MODE=false # Set to false to disable kiosk mode for development
