fix: Correct KIOSK_URL for bridged network testing

--- a/anyboot.conf
+++ b/anyboot.conf
@@ -1,5 +1,5 @@
 # Configuration for AnyBoot
 
 # URL to launch in Firefox Kiosk mode on boot
-KIOSK_URL=http://localhost:3000
+KIOSK_URL=http://10.4.0.180:3000 # Use host IP on bridged network
 KIOSK_MODE=false # Set to false to disable kiosk mode for development
